samples/_failures_safe/1761071048_8f4baa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26310c74.c: In function ‘main’:
./samples/SAFE/__tmp_26310c74.c:151:9: error: ‘f’ undeclared (first use in this function)
  151 |     if (f
      |         ^
./samples/SAFE/__tmp_26310c74.c:151:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_26310c74.c:151:10: error: expected ‘)’ at end of input
  151 |     if (f
      |        ~ ^
      |          )
./samples/SAFE/__tmp_26310c74.c:151:5: error: expected declaration or statement at end of input
  151 |     if (f
      |     ^~
